--- a/MvcCv/Web.config
+++ b/MvcCv/Web.config
@@ -17,9 +17,9 @@
   <system.web>
     <compilation debug="true" targetFramework="4.7.2" />
     <httpRuntime targetFramework="4.7.2" />
-	  <authentication mode="Forms">
-		  <forms loginUrl="/Login/Index/"></forms>
-	  </authentication>
+    <authentication mode="Forms">
+      <forms loginUrl="/Login/Index/"></forms>
+    </authentication>
   </system.web>
   <runtime>
     <assemblyBinding xmlns="urn:schemas-microsoft-com:asm.v1">
@@ -64,7 +64,7 @@
     </compilers>
   </system.codedom>
   <connectionStrings>
-    <add name="DbCvEntities" connectionString="metadata=res://*/Models.Entity.Model1.csdl|res://*/Models.Entity.Model1.ssdl|res://*/Models.Entity.Model1.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=DESKTOP-09B9E1C\SQLEXPRESS;initial catalog=DbCv;integrated security=True;trustservercertificate=True;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
+    <add name="DbCvEntities" connectionString="metadata=res://*/Models.Entity.Model1.csdl|res://*/Models.Entity.Model1.ssdl|res://*/Models.Entity.Model1.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=Bulent\SQLEXPRESS;initial catalog=DbCv;integrated security=True;trustservercertificate=True;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
   </connectionStrings>
   <entityFramework>
     <defaultConnectionFactory type="System.Data.Entity.Infrastructure.SqlConnectionFactory, EntityFramework" />
