--- a/MvcCv/MvcCv.csproj
+++ b/MvcCv/MvcCv.csproj
@@ -2535,6 +2535,10 @@
     <Content Include="login-form-20\css\bootstrap\_media.css" />
     <Content Include="login-form-20\css\style.css" />
     <Content Include="login-form-20\images\bg.jpg" />
+    <Content Include="login-form-20\images\images.jpeg" />
+    <Content Include="login-form-20\images\rsim_2.jpg" />
+    <Content Include="login-form-20\images\resim.jpg" />
+    <Content Include="login-form-20\images\sunset-sunrise-coast-coastal.jpg" />
     <Content Include="login-form-20\index.html" />
     <Content Include="login-form-20\js\bootstrap.min.js" />
     <Content Include="login-form-20\js\jquery.min.js" />
